fix bugs and cycle exception